# django-sql-dashboard

./: conftest.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
django_sql_dashboard/: views.py
docs/: contributing.md
