[project]
name = "django-sql-dashboard"
version = "1.2"
description = "Django app for building dashboards using raw SQL queries"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "markdown",
    "bleach",
]

[project.urls]
Documentation = "https://django-sql-dashboard.datasette.io/"
Issues = "https://github.com/simonw/django-sql-dashboard/issues"
CI = "https://github.com/simonw/django-sql-dashboard/actions"
Changelog = "https://github.com/simonw/django-sql-dashboard/releases"
Homepage = "https://github.com/simonw/django-sql-dashboard"

[dependency-groups]
dev = [
    "black>=22.3.0",
    "psycopg2",
    "pytest",
    "pytest-django>=4.11.1",
    "pytest-pythonpath",
    "dj-database-url",
    "testing.postgresql",
    "beautifulsoup4",
    "html5lib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_sql_dashboard"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["test_project", "pytest_plugins"]
addopts = "-p pytest_use_postgresql"
